# mistral-hack

./: README.md  app.py  doctor_app.py  mistral.py  pyproject.toml  rags.py  requirements.txt
data/leon/: Leon's life
data/nick/: note_last
data/oleg/: note_drjohnson
flagged/: log.csv
gradio_cached_examples/15/: log.csv
