[tool.poetry]
name = "project-alice"
version = "0.1.0"
description = ""
authors = ["Jeremy Molvaut <j.molvaut@oppycx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.41.1"
gradio = "^4.31.5"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
faiss-cpu = "^1.8.0"
mistralai = "^0.2.0"
weave = "^0.50.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
